# LIGHTNING

./: 8-20-2022 tests notes.txt  Cargo.toml  Documents - Shortcut.lnk  README.md  cargo skyline install.bat  cargo skyline listen.bat  set-ip RyujinxEthernet.bat  set-ip anker 788.bat  set-ip switch wilpower.bat
fighters/: Cargo.toml
fighters/common/: Cargo.toml
fighters/common/src/: function_hooks.rs  mechanics.rs
fighters/common/src/function_hooks/: cross_cancel_vanish.rs  mod.rs  remove_sdi_stamina_mode.rs  transition_terms.rs
fighters/common/src/mechanics/attack_cancel/: mod.rs
fighters/common/src/mechanics/lightning_02_up_special_callbacks/: mod.rs
fighters/common/src/mechanics/lightning_fsmeter/: mod.rs
fighters/common/src/mechanics/lightning_mode/: mod.rs
fighters/common/src/mechanics/motioncancels/: mod.rs
fighters/common/src/mechanics/vanish/: mod.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: fighters.rs  hooks.rs  lib.rs
src/custom/: mod.rs
src/detector_boxes/: mod.rs
src/fighters/: mod.rs
src/lightning/: mod.rs
src/lightning_/: mod.rs
src/lightning_01_common/: mod.rs
src/lightning_01_counter_cancels/: mod.rs
src/lightning_01_crimson_cancel/: mod.rs
src/lightning_01_custom_meters/: mod.rs
src/lightning_01_detector_boxes/: mod.rs
src/lightning_01_edgecancelling/: mod.rs
src/lightning_01_lightning_fsmeter/: mod.rs
src/lightning_01_lightning_mode/: mod.rs
src/lightning_01_lightning_mode_mechanics/: mod.rs
src/lightning_01_motioncancels/: mod.rs
src/lightning_01_special_mechanics/: mod.rs
src/lightning_01_ultrainstinct/: mod.rs
src/lightning_01_ultrainstinct2/: mod.rs
src/lightning_01_ultrainstinct_new/: mod.rs
src/lightning_01_ultrainstinct_vanish/: mod.rs
src/lightning_01_up_special_callbacks/: mod.rs
src/lightning_01_upbcancels/: mod.rs
src/lightning_01_upbtransitions/: mod.rs
src/lightning_01_vanish/: mod.rs
src/lightning_02_function_callbacks/: mod.rs
src/lightning_02_params/: mod.rs
src/lightning_02_template/: mod.rs
src/lightning_02_up_special_callbacks/: mod.rs
src/lightning_bayonetta/: mod.rs
src/lightning_brave/: mod.rs
src/lightning_buddy/: mod.rs
src/lightning_captain/: mod.rs
src/lightning_cloud/: mod.rs
src/lightning_common/: mod.rs
src/lightning_counter_cancels/: mod.rs
src/lightning_dedede/: mod copy.rs  mod.rs
src/lightning_demon/: mod.rs
src/lightning_diddy/: mod.rs
src/lightning_dolly/: mod.rs
src/lightning_donkey/: mod.rs
src/lightning_duckhunt/: mod.rs
src/lightning_edge/: mod.rs
src/lightning_eflame/: mod.rs
src/lightning_elight/: mod.rs
src/lightning_falco_fox/: mod.rs
src/lightning_gamewatch/: mod.rs
(+4024 files in other folders)
