[package]
name = "fighters"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "./common" }
dolly    = { path = "./lightning_dolly",    optional = true }


[features]
runtime              = []
ignore-common        = []

